added yank plugin

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,4 @@
-# nvim colors
-set-option -sa terminal-overrides ",xterm-256color:Tc"
-
+set-option -sa terminal-overrides ",xterm-255color:Tc" # Fix for vim colors
 set -g mouse on
 
 # Set leader to ctrl + space
@@ -8,15 +6,32 @@ unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
+
 # Change window with alt + h/l
 bind -n M-H previous-window
 bind -n M-L next-window
 
+
+# Split in cwd
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'rose-pine/tmux'
+
+
+# Tmux yank
+set-window-option -g mode-keys vi
+
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+
 
 # Theme settings
 set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
@@ -32,6 +47,6 @@ set -g @rose_pine_username_icon '@'
 set -g @rose_pine_hostname_icon ' '
 set -g @rose_pine_date_time_icon ' '
 
-set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
 
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
 run '~/.tmux/plugins/tpm/tpm'
