changed tmux so that panes start at 1 and added scripts to path

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,4 +1,4 @@
-set-option -sa terminal-overrides ",xterm-255color:Tc" # Fix for vim colors
+set-option -sa terminal-overrides ",xterm*:Tc" # Fix for vim colors
 set -g mouse on
 
 # Set leader to ctrl + space
@@ -15,6 +15,12 @@ bind -n M-L next-window
 # Split in cwd
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
+# Start windows and panes at 1
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
 
 
 # Plugins
