--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -2,6 +2,11 @@
 import = ["~/.config/alacritty/themes/rose-pine.toml"]
 
 
+# Terminal color
+[env]
+TERM = "xterm-256color"
+
+
 # Font configuration
 [font]
 size = 11.0
