--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -46,6 +46,7 @@ set -g @rose_pine_date_time '%H:%M %d/%m/%Y'
 set -g @rose_pine_disable_active_window_menu 'on'
 set -g @rose_pine_host 'on'
 set -g @rose_pine_user 'on'
+set -g @rose_pine_directory 'on'
 
 set -g @rose_pine_right_separator ' '
 set -g @rose_pine_window_status_separator ' '
