changed tmux split keys

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -13,8 +13,10 @@ bind -n M-L next-window
 
 
 # Split in cwd
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+unbind '"'
+unbind %
+bind v split-window -c "#{pane_current_path}"
+bind h split-window -h -c "#{pane_current_path}"
 
 # Start windows and panes at 1
 set -g base-index 1
