added bind for clearing screen in tmux

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,7 @@
 set-option -sa terminal-overrides ",xterm*:Tc" # Fix for vim colors
+bind C-l send-keys 'C-l' # Clear screen with leader -> Ctrl + l
 set -g mouse on
+
 
 # Set leader to ctrl + space
 unbind C-b
