new windows created in cwd

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -14,11 +14,12 @@ bind -n M-H previous-window
 bind -n M-L next-window
 
 
-# Split in cwd
+# Split and create window in cwd
 unbind '"'
 unbind %
 bind v split-window -c "#{pane_current_path}"
 bind h split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # Start windows and panes at 1
 set -g base-index 1
