swapped horizontal and vertical splitting

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -17,8 +17,8 @@ bind -n M-L next-window
 # Split and create window in cwd
 unbind '"'
 unbind %
-bind v split-window -c "#{pane_current_path}"
-bind h split-window -h -c "#{pane_current_path}"
+bind h split-window -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 # Start windows and panes at 1
