--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule ".config/nvim"]
 	path = .config/nvim
 	url = git@github.com:estevesnp/nvimrc.git
+    branch = main
 [submodule ".zsh/LS_COLORS"]
 	path = .zsh/LS_COLORS
 	url = https://github.com/trapd00r/LS_COLORS
