added yazi config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,7 @@
-set-option -sa terminal-overrides ",xterm*:Tc" # Fix for vim colors
-bind C-l send-keys 'C-l' # Clear screen with leader -> Ctrl + l
+set -ga terminal-overrides ",xterm*:Tc" # Fix for vim colors
+set -g default-terminal "tmux-256color" # Fix for yazi colors
 set -g mouse on
+bind C-l send-keys 'C-l' # Clear screen with leader -> Ctrl + l
 
 
 # Set leader to ctrl + space
