added tmux-sessionizer binding to tmux

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -29,6 +29,14 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 
+# Tmux yank
+set-window-option -g mode-keys vi
+
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -36,13 +44,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'estevesnp/rose-pine-tmux'
 
-
-# Tmux yank
-set-window-option -g mode-keys vi
-
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+# tmux-sessionizer binding
+bind C-o display-popup -E "tms"
 
 
 # Theme settings
