--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -3,6 +3,13 @@ cursor-style-blink = false
 cursor-opacity = 0.7
 shell-integration-features = no-cursor
 
+selection-background = gray
+copy-on-select = clipboard
+clipboard-trim-trailing-spaces = true
+
 font-family = CommitMono Nerd Font
+font-size = 12
 
 theme = rose-pine
+
+gtk-titlebar = false
