--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,5 +13,6 @@ copy_on_select          clipboard
 remember_window_size    no
 initial_window_width    100c
 initial_window_height   30c
+window_padding_width    4
 
 include rose-pine-theme.conf
