--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,6 +13,11 @@ copy_on_select          clipboard
 remember_window_size    no
 initial_window_width    100c
 initial_window_height   30c
-window_padding_width    4
+window_padding_width    1
+
+map ctrl+enter          toggle_maximized
+map ctrl+shift+enter    toggle_fullscreen
+
+scrollback_pager        nvim -c "silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer -"
 
 include rose-pine-theme.conf
