removed tmux navigator plugin

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,13 +1,19 @@
 set -ga terminal-overrides ",xterm*:Tc" # Fix for vim colors
 set -g default-terminal "tmux-256color" # Fix for yazi colors
 set -g mouse on
-bind C-l send-keys 'C-l' # Clear screen with leader -> Ctrl + l
 
 
 # Set leader to ctrl + space
 unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
+
+
+# Pane navigation with leader -> ctrl + [vim direction]
+bind C-h select-pane -L
+bind C-l select-pane -R
+bind C-j select-pane -D
+bind C-k select-pane -U
 
 
 # Change window with alt + h/l
@@ -21,6 +27,7 @@ unbind %
 bind h split-window -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+
 
 # Start windows and panes at 1
 set -g base-index 1
@@ -41,7 +48,6 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'estevesnp/rose-pine-tmux'
 
 # tmux-sessionizer binding
