--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -4,6 +4,7 @@ cursor-color = gray
 cursor-opacity = 0.7
 shell-integration-features = no-cursor
 
+selection-foreground = black
 selection-background = gray
 copy-on-select = clipboard
 clipboard-trim-trailing-spaces = true
