--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -9,11 +9,15 @@ set -g prefix C-Space
 bind C-Space send-prefix
 
 
-# Pane navigation with leader -> ctrl + [vim direction]
-bind C-h select-pane -L
-bind C-l select-pane -R
-bind C-j select-pane -D
-bind C-k select-pane -U
+# Pane navigation with leader -> (ctrl +) [vim direction]
+bind C-h if -F '#{pane_at_left}'   '' 'select-pane -L'
+bind h   if -F '#{pane_at_left}'   '' 'select-pane -L'
+bind C-l if -F '#{pane_at_right}'  '' 'select-pane -R'
+bind l   if -F '#{pane_at_right}'  '' 'select-pane -R'
+bind C-k if -F '#{pane_at_top}'    '' 'select-pane -U'
+bind k   if -F '#{pane_at_top}'    '' 'select-pane -U'
+bind C-j if -F '#{pane_at_bottom}' '' 'select-pane -D'
+bind j   if -F '#{pane_at_bottom}' '' 'select-pane -D'
 
 
 # Change window with alt + h/l
@@ -24,9 +28,9 @@ bind -n M-L next-window
 # Split and create window in cwd
 unbind '"'
 unbind %
-bind h split-window -c "#{pane_current_path}"
-bind v split-window -h -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
+bind b split-window -c    '#{pane_current_path}'
+bind v split-window -h -c '#{pane_current_path}'
+bind c new-window -c      '#{pane_current_path}'
 
 
 # Start windows and panes at 1
@@ -39,9 +43,9 @@ set-option -g renumber-windows on
 # Tmux yank
 set-window-option -g mode-keys vi
 
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind -T copy-mode-vi v   send-keys -X begin-selection
+bind -T copy-mode-vi y   send-keys -X copy-selection-and-cancel
+bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
 
 # Plugins
