--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -6,6 +6,16 @@ import:
 env:
   TERM: xterm-256color
 
+# Cursor configuration
+cursor:
+  style:
+    shape: Beam
+
+colors:
+  cursor:
+    cursor: 0xcfcde2
+    text: 0x000000
+
 # Mouse configuration
 mouse:
   hide_when_typing: true
