--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -48,14 +48,19 @@ bind -T copy-mode-vi y   send-keys -X copy-selection-and-cancel
 bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
 
+# Open 'cs' in popup
+bind C-o display-popup -E "cs"
+
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'estevesnp/rose-pine-tmux'
 
 
-# Theme settings
+# Theme
+set -g @plugin 'estevesnp/rose-pine-tmux' # custom rose-pine-tmux fork
+
 set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
 set -g @rose_pine_date_time '%H:%M %d/%m/%Y'
 
