swapped git status

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -49,7 +49,7 @@ bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
 
 # Open 'cs' in popup
-bind C-o display-popup -E "cs"
+bind C-o display-popup -E "cs --no-preview"
 
 
 # Plugins
