--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -47,8 +47,8 @@ bind -T copy-mode-vi v   send-keys -X begin-selection
 bind -T copy-mode-vi y   send-keys -X copy-selection-and-cancel
 bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
-
-# Open 'cs' in popup
+# Popups
+bind C-p display-popup -d "#{pane_current_path}" -E "$SHELL"
 bind C-o display-popup -E "cs --no-preview"
 
 
