--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -15,6 +15,8 @@ font-size = 12
 gtk-adwaita = false
 gtk-titlebar = false
 
+macos-option-as-alt = true
+
 theme = rose-pine
 
-config-file = ?./macos
+config-file = ?./local.config
