--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -12,11 +12,10 @@ clipboard-trim-trailing-spaces = true
 font-family = CommitMono Nerd Font
 font-size = 12
 
-gtk-adwaita = false
 gtk-titlebar = false
 
 macos-option-as-alt = true
 
-theme = rose-pine
+theme = Rose Pine
 
 config-file = ?./local.config
