--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -12,6 +12,9 @@ clipboard-trim-trailing-spaces = true
 font-family = CommitMono Nerd Font
 font-size = 12
 
+# disable ligatures
+font-feature = -calt
+
 gtk-titlebar = false
 
 macos-option-as-alt = true
