--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,6 @@
 set -ga terminal-overrides ",xterm*:Tc" # Fix for vim colors
 set -g default-terminal "tmux-256color" # Fix for yazi colors
+set -g mouse on
 
 
 # Set leader to ctrl + space
