feat(helix): set filetype for bash to include custom .zshrc_(post|pre)_init files

--- a/.config/helix/languages.toml
+++ b/.config/helix/languages.toml
@@ -8,3 +8,7 @@ indent = { tab-width = 4, unit = "    " }
 
 [language-server.clangd]
 args = [ "--function-arg-placeholders=0" ]
+
+[[language]]
+name = "bash"
+file-types = [ "sh", "bash", "zsh", "zshrc", { glob = ".zshrc_*" } ]
