feat(mvim): normalize mvim setup with nvim

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -20,7 +20,7 @@ bind C-j if -F '#{pane_at_bottom}' '' 'select-pane -D'
 bind j   if -F '#{pane_at_bottom}' '' 'select-pane -D'
 
 
-# Change window with alt + h/l
+# Change window with shift + alt + h/l
 bind -n M-H previous-window
 bind -n M-L next-window
 
