feat: remove tmux plugins

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -40,26 +40,29 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 
-# Tmux yank
+# Vi + Copy Mode
 set-window-option -g mode-keys vi
 
 bind -T copy-mode-vi v   send-keys -X begin-selection
 bind -T copy-mode-vi y   send-keys -X copy-selection-and-cancel
 bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
+# Misc
+
+set -g history-limit 50000        # Increase scrollback buffer
+set -sg escape-time 0             # Remove delay after Esc (faster vi / copy-mode response)
+set -g focus-events on            # Enable terminal focus events (helps vim/neovim & focus-aware tools)
+set -g status-interval 5          # Refresh status line more frequently
+set -g display-time 4000          # Keep tmux messages visible a bit longer
+set-window-option -g aggressive-resize on  # Resize panes more intuitively when attaching/detaching clients
+
+
 # Popups
 bind C-p display-popup -d "#{pane_current_path}" -E "$SHELL"
 bind C-o display-popup -E "cs --no-preview"
 
 
-# Plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-
-
 # Theme
-set -g @plugin 'estevesnp/rose-pine-tmux' # custom rose-pine-tmux fork
 
 set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
 set -g @rose_pine_date_time '%H:%M %d/%m/%Y'
@@ -75,6 +78,4 @@ set -g @rose_pine_username_icon '@'
 set -g @rose_pine_hostname_icon ' '
 set -g @rose_pine_date_time_icon ' '
 
-
-set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/rose-pine-tmux/rose-pine.tmux' # custom rose-pine-tmux fork
