--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule ".zsh/plugins/git-prompt.zsh"]
 	path = .zsh/plugins/git-prompt.zsh
 	url = https://github.com/woefe/git-prompt.zsh
+[submodule ".config/tmux/rose-pine-tmux"]
+	path = .config/tmux/rose-pine-tmux
+	url = git@github.com:estevesnp/rose-pine-tmux.git
