--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -44,8 +44,12 @@ set-option -g renumber-windows on
 set-window-option -g mode-keys vi
 
 bind -T copy-mode-vi v   send-keys -X begin-selection
-bind -T copy-mode-vi y   send-keys -X copy-selection-and-cancel
+bind -T copy-mode-vi y   send-keys -X copy-selection
 bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
+
+# releasing mouse selection doesn't copy
+unbind -T copy-mode-vi MouseDragEnd1Pane
+
 
 # Misc
 
