--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -15,6 +15,8 @@ font-size = 12
 # disable ligatures
 font-feature = -calt
 
+app-notifications = no-clipboard-copy
+
 gtk-titlebar = false
 
 macos-option-as-alt = true
