--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -64,6 +64,7 @@ set-window-option -g aggressive-resize on  # Resize panes more intuitively when 
 # Popups
 bind C-p display-popup -d "#{pane_current_path}" -E "$SHELL"
 bind C-o display-popup -E "cs --no-preview"
+bind C-w display-popup -E "cs --no-preview --window"
 
 
 # Theme
